--- a/config/zones/AT.yaml
+++ b/config/zones/AT.yaml
@@ -331,28 +331,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 175.02
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 161.72
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 214.65
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 201.35
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 226.22
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 212.92
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 137.25
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 123.95
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 101.83
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 88.53
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 133.4
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 120.1
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
