--- a/config/zones/BA.yaml
+++ b/config/zones/BA.yaml
@@ -93,24 +93,24 @@ emissionFactors:
     hydro discharge:
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 10.7
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 10.7
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 630.56
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 617.26
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 340.88
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 327.58
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 505.19
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 491.89
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
