--- a/config/zones/BE.yaml
+++ b/config/zones/BE.yaml
@@ -333,28 +333,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 175.33
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 162.03
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 147.5
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 134.2
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 155.76
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 142.46
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 142.89
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 129.59
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 125.16
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 111.86
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 144.07
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 130.77
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
