--- a/config/zones/DE.yaml
+++ b/config/zones/DE.yaml
@@ -342,7 +342,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 236.66
+      value: 236.68
     oil:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -396,28 +396,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 331.31
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 318.01
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 363.15
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 349.85
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 400.61
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 387.31
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 298.86
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 285.56
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 265.9
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 252.6
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 260.66
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 247.38
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
