--- a/config/zones/ES.yaml
+++ b/config/zones/ES.yaml
@@ -353,28 +353,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 154.36
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 141.06
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 142.86
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 129.56
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 188.11
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 174.81
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 112.93
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 99.63
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 89.94
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 76.64
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 90.56
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 77.26
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
