--- a/config/zones/FR.yaml
+++ b/config/zones/FR.yaml
@@ -411,28 +411,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 52.88
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 39.58
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 56.61
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 43.31
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 80.72
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 67.42
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 51.73
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 38.43
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 38.02
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 24.72
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 35.6
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 22.3
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
