--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -228,28 +228,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 175.56
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 162.26
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 189.97
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 176.67
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 188.75
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 175.45
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 161.98
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 148.68
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 138.46
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 125.16
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 143.58
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 130.28
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
