--- a/config/zones/IT-CNO.yaml
+++ b/config/zones/IT-CNO.yaml
@@ -77,7 +77,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 176.18
+      value: 176.32
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -135,7 +135,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-      value: 209.18
+      value: 209.32
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -175,8 +175,8 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 299.15
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 285.85
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
