--- a/config/zones/IT-CSO.yaml
+++ b/config/zones/IT-CSO.yaml
@@ -118,7 +118,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 215.35
+      value: 215.52
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -173,7 +173,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 204.7
+      value: 204.77
     oil:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -196,7 +196,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-      value: 248.35
+      value: 248.52
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -236,28 +236,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 358.44
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 345.14
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 364.85
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 351.55
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 390.48
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 377.18
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 304.76
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 291.46
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 255.45
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 242.15
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 228.7
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 215.47
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
