--- a/config/zones/IT-NO.yaml
+++ b/config/zones/IT-NO.yaml
@@ -107,7 +107,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 212.65
+      value: 212.66
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -162,7 +162,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 209.13
+      value: 209.14
     oil:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -185,7 +185,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-      value: 245.65
+      value: 245.66
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -225,28 +225,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 260.12
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 246.82
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 282.09
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 268.79
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 311.0
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 297.7
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 256.81
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 243.51
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 210.05
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 196.75
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 233.13
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 219.84
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
