--- a/config/zones/IT-SAR.yaml
+++ b/config/zones/IT-SAR.yaml
@@ -82,7 +82,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 394.54
+      value: 394.58
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -160,7 +160,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-      value: 427.54
+      value: 427.58
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -200,28 +200,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 552.85
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 539.55
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 504.15
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 490.85
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 510.68
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 497.38
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 462.32
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 449.02
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 452.79
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 439.49
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 417.88
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 404.58
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
