--- a/config/zones/IT-SIC.yaml
+++ b/config/zones/IT-SIC.yaml
@@ -142,7 +142,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 203.27
+      value: 203.26
     oil:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -205,28 +205,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 322.15
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 308.85
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 312.12
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 298.82
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 349.82
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 336.52
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 268.26
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 254.96
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 210.76
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 197.46
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 227.27
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 213.96
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
