--- a/config/zones/IT.yaml
+++ b/config/zones/IT.yaml
@@ -29,7 +29,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 212.07
+      value: 212.11
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -84,7 +84,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 206.38
+      value: 206.41
     oil:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -107,7 +107,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-      value: 245.07
+      value: 245.11
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -147,28 +147,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 288.71
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 275.41
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 303.69
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 290.39
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 341.15
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 327.85
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 266.48
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 253.18
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 217.69
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 204.39
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 230.38
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 217.11
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
