--- a/config/zones/LT.yaml
+++ b/config/zones/LT.yaml
@@ -286,28 +286,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 10.7
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 210.95
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 197.65
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 209.15
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 195.85
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 157.56
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 144.26
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 136.85
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 123.55
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 110.07
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 96.77
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
