--- a/config/zones/PL.yaml
+++ b/config/zones/PL.yaml
@@ -284,7 +284,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 559.9
+      value: 559.85
     oil:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -338,28 +338,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 10.7
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 10.7
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 10.7
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 10.7
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 500.34
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 487.04
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 583.9
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 570.55
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
