--- a/config/zones/RS.yaml
+++ b/config/zones/RS.yaml
@@ -181,7 +181,7 @@ emissionFactors:
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
       source: Electricity Maps, 2025 zone average
-      value: 478.63
+      value: 483.26
   lifecycle:
     hydro:
       datetime: '2020-01-01'
@@ -190,28 +190,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 10.7
     - _comment: used default IPCC 2014 value of 24.0
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 24.0
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 10.7
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 553.5
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 540.2
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 466.29
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 452.99
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 477.97
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 464.67
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 502.63
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 493.96
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
