--- a/config/zones/SK.yaml
+++ b/config/zones/SK.yaml
@@ -234,28 +234,28 @@ emissionFactors:
     hydro discharge:
     - _comment: used storage values greater than zero.
       datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average; IPCC 2014
-      value: 304.95
+      source: Electricity Maps, 2020 zone average; UNECE 2022
+      value: 291.65
     - _comment: used storage values greater than zero.
       datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average; IPCC 2014
-      value: 333.49
+      source: Electricity Maps, 2021 zone average; UNECE 2022
+      value: 320.19
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average; IPCC 2014
-      value: 392.11
+      source: Electricity Maps, 2022 zone average; UNECE 2022
+      value: 378.81
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average; IPCC 2014
-      value: 217.78
+      source: Electricity Maps, 2023 zone average; UNECE 2022
+      value: 204.48
     - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average; IPCC 2014
-      value: 171.17
+      source: Electricity Maps, 2024 zone average; UNECE 2022
+      value: 157.87
     - _comment: used storage values greater than zero.
       datetime: '2025-01-01'
-      source: Electricity Maps, 2025 zone average; IPCC 2014
-      value: 189.93
+      source: Electricity Maps, 2025 zone average; UNECE 2022
+      value: 176.63
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
